# Euler_Maruyama_solver

./: CMakeLists.txt  EuMa.h  Marsaglia_polar_generator.c  PRNG_uniform.c  README.md  diffusion_function.c  drift_function.c  main.c  plot_sample.gnuplot
